# learngl_thecherno

./: .gitignore  CMakeLists.txt  Makefile  README.md  glad.c  main.cc
res/shaders/: Basic.shader
